# DendyTanks

./: .clang-format  .envrc  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Game.cpp  Game.h  README.md  conanfile.txt  config.ini  default.nix  flake.nix  main.cpp  mySdlExample.cpp  mySdlExample.h  new_main.cpp  nix-build-with-toolchain.sh  nix-build.sh  nix-cmake-build.sh  nix-cmake.sh  nix-toolchain.cmake  shell.nix  vcpkg.json
.openhands/: setup.sh
.openhands/microagents/: repo.md  trigger_continue.md  yummy.md
Core/: ConfigManager.cpp  ConfigManager.h  GameEngine.cpp  GameEngine.h  ResourceManager.cpp  ResourceManager.h  ServiceLocator.h
Core/ECS/: Component.h  Entity.h  EntityManager.h  System.h
Core/ECS/Components/: CollisionComponent.h  RenderComponent.h  TransformComponent.h
Core/ECS/Systems/: CollisionSystem.h  RenderSystem.h
Entities/: Utility.h
Entities/Commands/: BaseCommand.cpp  BaseCommand.h  CommandPatternExample.cpp  CommandPatternExample.h  Commands.h  MoveCommand.cpp  MoveCommand.h  MoveCommandExample.cpp  MoveCommandExample.h  ShootCommand.cpp  ShootCommand.h
Entities/Errors/: ErrorCode.cpp  ErrorCode.h
Entities/GameObjects/: BaseGameObject.cpp  BaseGameObject.h  GOPlayer.cpp  GOPlayer.h  GameObject.cpp  GameObject.h  GameObjectExample.cpp  GameObjectExample.h  GameWorld.cpp  GameWorld.h  PlayerGameObject.cpp  PlayerGameObject.h  Position.cpp  Position.h  Projectile.cpp  Projectile.h  ShootGameObject.cpp  ShootGameObject.h  StepResult.h  fixed_typeat.cpp
Entities/GameObjects/ObjectProps/: Position.cpp  Position.h
Entities/GameObjects/World/: GameObjectsFlyweight.cpp  GameObjectsFlyweight.h  GameWorld.cpp  GameWorld.h  MyGameWorld.cpp  MyGameWorld.h
Processors/: CommandProcessor.cpp  CommandProcessor.h  CommandsProcessor.cpp  CommandsProcessor.h  Game.cpp  Game.h  ParticlesSystem.cpp  ParticlesSystem.h  Utils.h  WorldGenerator.cpp  WorldGenerator.h
Processors/Common/: CommandsProcessor.cpp  CommandsProcessor.h  FpsController.cpp  FpsController.h  Game.cpp  Game.h  MainProcessor.cpp  MainProcessor.h  NpcProcessor.cpp  NpcProcessor.h  ParticlesSystem.cpp  ParticlesSystem.h  ResourceManager.h
Processors/Graphics/: AbstractRenderer.h  BaseRenderer.cpp  BaseRenderer.h  CRenderer.cpp  CRenderer.h  FPS.h  IRenderer.h  ParticlesSystem.h  RenderData.h  Renderer.cpp  Renderer.h  RendererFabric.cpp  RendererFabric.h  RendererFactory.cpp  RendererFactory.h  SDL2Renderer.cpp  SDL2Renderer.h
Processors/Parsers/: WorldGenerator.cpp  WorldGenerator.h
resources/: labirinth.txt  labirinth50x50.txt  settings_example.json
tests/: CMakeLists.txt  GameResourceTest.cpp  ResourceManagerTest.cpp  fixed_gameworld_tests.cpp  game_tests.cpp  gameobject_tests.cpp  gameworld_tests.cpp  mainprocessor_tests.cpp  managed_vector_tests.cpp  multiple_steps_test.cpp  new_utility_tests.cpp  position_tests.cpp  simple_tests.cpp  utility_tests.cpp
unit_tests/: test_positions.cpp
